--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
 					cores coreespondentes à cada item, o caminho fica mais claro para o usuário.
 				  <h3>
 				  <h2>JOVENS DA PERIFA POR DENTRO DAS NOTÍCIAS!</h2>
-				  <h3>Implementaria uma aba chamada "CULTURAL". Nela estará somente notícias referentes à<br>
-					cultura, especificamente da perfiferia mostrando como os jovens estão envolvidos na<br>
-				    cultura, seja na música, na dança ou na arte. Assim terá assuntos interessantes aos<br>
-					jovens pois estará incluindo-os, incentivando a participação na cultura.</h3>
+				  <h3>Para poder ser mais interessante para um público jovem, de periferia, que não está<br>
+			     	      acostumado com o uso de internet por computadores e não tem interesse em notícias,<br>
+				      eu implementaria uma aba chamada "CULTURAL". Nela estará somente notícias referentes à<br>
+				      cultura, especificamente da perfiferia mostrando como os jovens estão envolvidos na<br>
+				      cultura, seja na música, na dança ou na arte. Assim terá assuntos interessantes aos<br>
+			              jovens pois estará incluindo-os, incentivando a participação na cultura e na internet.</h3>
 			  </div>
 			</section>
 		  </main>
