--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				      eu implementaria uma aba chamada "CULTURAL". Nela estará somente notícias referentes à<br>
 				      cultura, especificamente da perfiferia mostrando como os jovens estão envolvidos na<br>
 				      cultura, seja na música, na dança ou na arte. Assim terá assuntos interessantes aos<br>
-			              jovens pois estará incluindo-os, incentivando a participação na cultura e na internet.</h3>
+			              jovens pois estará incluindo-os, incentivando a participação social na internet.</h3>
 			  </div>
 			</section>
 		  </main>
